Datepicker z-index fix

--- a/src/style2.css
+++ b/src/style2.css
@@ -391,7 +391,9 @@ html, body {
         display: flex;
         margin-left: auto;
         margin-right: auto;
+        z-index: 5;
     }
+
 
 }   
 
